# caicli

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml
src/: area.py  area_client.py  cli.py  polygon.py  temp.py
src/api/: client.py  types.py
tests/: test_area_client.py  test_cli.py
tests/resources/: TEST_AREA.py
