[tool.poetry]
name = "caicli"
version = "0.1.0"
description = "Python CLI for retrieving avalanche and weather forecasts from the CAIC"
authors = ["Jared Kreppein <jaredkrep@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"

[tool.pytest.ini_options]
pythonpath = [ "." ]
testpaths = [ "tests" ]
required_plugins = [
	"pytest-xdist",
	"pytest-cov",
	"pytest-mock"
]
addopts = "-n auto --cov=src --cov-fail-under=100"

[tool.coverage.report]
fail_under = "100"

[tool.poetry.scripts]
main = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
